--- a/app/html/header.html
+++ b/app/html/header.html
@@ -11,6 +11,9 @@
             <a class="nav-link fw-bold py-1 px-0" href="/contacts/"><p> Contacts </p></a>
             <a class="nav-link fw-bold py-1 px-0" href="/about/"><p> About </p></a>
             <a class="nav-link fw-bold py-1 px-0" href="/projects/"><p> Projects </p></a>
+            <!-- <a class="nav-link fw-bold py-1 px-0" href="/nowhere/"> </a> -->
         </nav>
+        
     </div>
+    
 </header>
