add en-ru translation

--- a/app/html/ru/projects.html
+++ b/app/html/ru/projects.html
@@ -12,9 +12,9 @@
         {% include "header.html" %}
         
         <main class="px-3">
-            <h1 class="cover-heading">Projects</h1>
+            <h1 class="cover-heading">Проекты</h1>
             <p class="lead"></p>
-            <p class="lead">There will be projects (maybe even with photos)</p>
+            <p class="lead">Тут будут проекты (может даже с картинками)</p>
 
         </main>
 
