--- a/app/html/ru/about.html
+++ b/app/html/ru/about.html
@@ -12,9 +12,9 @@
             {% include "header.html" %}
             
             <main class="px-3">
-                <h1 class="cover-heading">About</h1>
+                <h1 class="cover-heading">О проекте</h1>
                 <p class="lead"></p>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia atque, voluptate eligendi. Dolore perferendis dolorem in iusto laboriosam, non consequatur voluptas optio inventore, rem, vitae temporibus deleniti! Nesciunt iusto, dolor.</p>
+                <p class="lead">Лорем ипсум долор вседела, sit amet, consectetur adipisicing elit. Mollitia atque, voluptate eligendi. Dolore perferendis dolorem in iusto laboriosam, non consequatur voluptas optio inventore, rem, vitae temporibus deleniti! Nesciunt iusto, dolor.</p>
 
             </main>
 
