--- a/app/html/ru/contacts.html
+++ b/app/html/ru/contacts.html
@@ -12,9 +12,9 @@
         {% include "header.html" %}
         
         <main class="px-3">
-            <h1 class="cover-heading">Contacts</h1>
+            <h1 class="cover-heading">Контакты</h1>
             <p class="lead"></p>
-            <p class="lead">There will be contacts</p>
+            <p class="lead">Тут будут контакты</p>
 
         </main>
 
