--- a/app/html/ru/header.html
+++ b/app/html/ru/header.html
@@ -3,14 +3,15 @@
     <div>
         <h3 class="float-md-start mb-0">
             <a class="main-page-link fw-bold py-1 px-0 text-white" href="/">
-                Curriculum Vitae
+                Резюме
             </a>
         </h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
             <!-- <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/main"><p> Home </p></a> -->
-            <a class="nav-link fw-bold py-1 px-0" href="/contacts/"><p> Contacts </p></a>
-            <a class="nav-link fw-bold py-1 px-0" href="/about/"><p> About </p></a>
-            <a class="nav-link fw-bold py-1 px-0" href="/projects/"><p> Projects </p></a>
+            <a class="nav-link fw-bold py-1 px-0" href="/contacts/"><p> Контакты </p></a>
+            <a class="nav-link fw-bold py-1 px-0" href="/about/"><p> О проекте </p></a>
+            <a class="nav-link fw-bold py-1 px-0" href="/projects/"><p> Проекты </p></a>
+            <a class="nav-link fw-bold py-1 px-0" href="/en/"><p> ENG </p></a>
         </nav>
     </div>
 </header>
