--- a/app/html/ru/index.html
+++ b/app/html/ru/index.html
@@ -11,9 +11,9 @@
         {% include "header.html" %}
         
         <main class="px-3">
-            <h1 class="cover-heading">Main Page</h1>
+            <h1 class="cover-heading">Главная страница</h1>
             <p class="lead"></p>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates cum deserunt quidem nisi consequatur repudiandae optio similique esse enim animi autem, architecto officiis ipsum quis. Blanditiis in quia excepturi consectetur.</p>
+            <p class="lead">Лорем ипсум долор блаблабла, sit amet, consectetur adipisicing elit. Voluptates cum deserunt quidem nisi consequatur repudiandae optio similique esse enim animi autem, architecto officiis ipsum quis. Blanditiis in quia excepturi consectetur.</p>
 
             <p class="lead">
                 <a href="/nowhere/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
